# igen-core-py

./: pyproject.toml
src/igen/core/: __init__.py
src/igen/core/domain/: hla_allele.py  hla_haplotype.py
src/igen/core/enum/: hla_locus.py  hla_locus_chain.py  hla_locus_class.py  hla_locus_group.py
src/igen/core/error/: __init__.py  api_error.py
src/igen/core/service/: __init__.py  logger_service.py
