[project]
name = "igen-core"
version = "1.1.1"
description = ""
authors = [{ name = "gvalves", email = "gustavo.alves@igen.org.br" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "igen-shared @ git+https://github.com/igen-org/igen-shared-py.git@v1.0.0",
]

[tool.poetry]
packages = [{ include = "igen", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
